styles/index.module.css
.card {
	width: 70%;
	margin: 50px;
	padding: 50px;
	border-radius: 5px;
	border: solid var(--color-5);
	background-color: white;
}

@media all and (max-width: 500px) {
	.card {
		width: 100%;
		margin: 20px;
	}
}

